@@ -1,3 +1,4 @@
 $Id$
 
-David Shaw <dshaw@jabberwocky.com>
+David Shaw <dshaw@jabberwocky.com>    (program)
+Peter Palfrader <peter@palfrader.org> (man page)
