@@ -39,4 +39,5 @@ rm -rf $RPM_BUILD_ROOT
 %files
 %defattr(-,root,root)
 %doc README NEWS
+%{_mandir}/man1/*
 %{_bindir}/paperkey
